# web_homework_1

./: .gitignore  Dockerfile  README.md  pyproject.toml  web.exercise2.py
